--- a/src/app/bar-chart/bar-chart.component.html
+++ b/src/app/bar-chart/bar-chart.component.html
@@ -1,1 +1,3 @@
-<div #chart id="chart" (window:resize)="onResize($event)"></div>
+<!-- <div #chart id="chart" (window:resize)="onResize($event)"></div> -->
+<h1>Big Kinds Data</h1>
+<svg></svg>
