--- a/src/app/bar-chart/bar-chart.component.html
+++ b/src/app/bar-chart/bar-chart.component.html
@@ -1,3 +1,5 @@
 <!-- <div #chart id="chart" (window:resize)="onResize($event)"></div> -->
 <h1>Big Kinds Data</h1>
-<svg></svg>
+<div #chart >
+    <svg width="960" height="500"></svg>
+</div>
